2004-05-07  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.5 released.

	- Added mechanism to pass :arguments value in app-servers to the
	corresponding kahua application, by kahua-app-args parameter.
	
	- Added kahua-current-user-name for get only current user name
	(not <kahua-user> object). This is useful, for example, to support
	non-registered users' login.
	
2004-05-07  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/server.scm:
	Added kahua-current-user-name for get only current user name
	(not <kahua-user> object).  This is useful for supporting
	non-registered users' login.

	* src/kahua-server.in:
	Added and exported kahua-app-args parameter in order to pass
	:argument in app-servers to kahua applications.
	
2004-04-27  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.4 released.
	Added elements for frame.  
	Added more entries in examples/app-servers.samples.
	
	
2004-04-26  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/server.scm (a/cont, form/cont):
	modified for @ and @@

	* src/kahua/server.scm:
	added frame/cont (source code by Kenji Hisazumi)
	
	* src/kahua/elem.scm:
	added frameset:, frame:, frame/cont:, frameset/, frame/, and
	frame/cont/

2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.3.1 released
	Fix bug in test/Makefile.in

2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.3 released
	Several modifications in testing part.

2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* test/admin.scm.in, shell.scm.in,
	  test/spvr.scm.in, test/usermode.scm.in:
	modified socket check rootine (because there are systems
	return 'fifo (instead of 'socket) for unix domain socket).
	
2004-04-19  Nobuo Yamashita  <nobsun@sampou.org>

	* test/shell.scm.in, test/usermode.scm.in:
	use 'env -i' instead of 'env -u' (because BSD's env does not support
	-u option).
	
2004-04-09  Nobuo Yamashita  <nobsun@sampou.org>

	* Version 0.2.2 released.
	
2004-04-09  Nobuo Yamashita  <nobsun@sampou.org>
